libs/extractor/src/snapshots/extractor__tests__props_direct_object_select-4.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Flex} from '@devup-ui/core'\n        <Flex bg={{a:\"$red\", b:\"$blue\"}[idx]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$blue",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "background",
                value: "$red",
                level: 0,
                selector: None,
                style_order: None,
                layer: None,
            },
        ),
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupAssignment54) => <div className={`OLdisplay-vflex-o0 ${__devupAssignment54?.[0] ?? \"\"}`} style={{ ...__devupAssignment54?.[1] }} />)({\n\ta: ((__devupValue) => [\n\t\t\"OHb9zcebonqx3uqcup\",\n\t\t{},\n\t\t__devupValue\n\t])(\"$red\"),\n\tb: ((__devupValue) => [\n\t\t\"OHc9tm718zoq9a6b_f\",\n\t\t{},\n\t\t__devupValue\n\t])(\"$blue\")\n}[idx]);\n",
}
