libs/extractor/src/snapshots/extractor__tests__props_direct_variable_object_responsive_select.snap
---
source: libs/extractor/src/lib.rs
expression: "ToBTreeSet::from(extract(\"test.jsx\",\nr#\"import {Flex} from '@devup-ui/core'\n;<Flex gap={{ 0: [a, b, c], \"1\": [d, e, f] }[idx]} />\n        \"#,\nExtractOption\n{\n    package: \"@devup-ui/core\".to_string(), css_dir:\n    \"@devup-ui/core\".to_string(), single_css: true, import_main_css: false,\n    import_aliases: HashMap::new()\n}).unwrap())"
---
ToBTreeSet {
    styles: {
        Static(
            ExtractStaticStyle {
                property: "display",
                value: "flex",
                level: 0,
                selector: None,
                style_order: Some(
                    0,
                ),
                layer: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 0,
                identifier: "__devupChoice0[`1`]",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 1,
                identifier: "__devupChoice0[`2`]",
                selector: None,
                style_order: None,
            },
        ),
        Dynamic(
            ExtractDynamicStyle {
                property: "gap",
                level: 2,
                identifier: "__devupChoice0[`3`]",
                selector: None,
                style_order: None,
            },
        ),
    },
    code: "import \"@devup-ui/core/devup-ui.css\";\n((__devupChoice0) => <div className={`a ${{\n\t\"0\": \"b d f\",\n\t\"1\": \"b d f\"\n}[__devupChoice0?.[\"0\"]] || \"\"}`} style={{\n\t\"--c\": {\n\t\t0: __devupChoice0[`1`],\n\t\t1: __devupChoice0[`1`]\n\t}[__devupChoice0?.[\"0\"]],\n\t\"--e\": {\n\t\t0: __devupChoice0[`2`],\n\t\t1: __devupChoice0[`2`]\n\t}[__devupChoice0?.[\"0\"]],\n\t\"--g\": {\n\t\t0: __devupChoice0[`3`],\n\t\t1: __devupChoice0[`3`]\n\t}[__devupChoice0?.[\"0\"]]\n}} />)({\n\t0: [\n\t\t\"0\",\n\t\ta,\n\t\tb,\n\t\tc\n\t],\n\t\"1\": [\n\t\t\"1\",\n\t\td,\n\t\te,\n\t\tf\n\t]\n}[idx]);\n",
}
